--- a/src/static/css/critical/_layout.styl
+++ b/src/static/css/critical/_layout.styl
@@ -41,8 +41,8 @@
   $rg = minmax(var(--layout-body-side-gap), auto)
   $foot-h = var(--layout-footer-height)
 
-  width: 100vw
-  max-width: 100vw
+  width: 100%
+  max-width: 100%
   min-height: 'calc(100vh + %s)' % $foot-h // Footer requires scrolling
 
   grid-kiss:"+--------------------------------------------+         ",
